# dart_juce_ipc

./: .gitmodules  LICENSE  README.md  all_analysis_options.yaml  analysis_options.yaml  juce_example_logs.txt  pubspec.yaml
.github/workflows/: build.yml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/tool/host/: CMakeLists.txt  ChildProcessDemo.cpp  ChildProcessDemo.h  DemoUtilities.h  e2e.test.ts  jest.config.ts  package-lock.json  package.json
lib/: juce_ipc.dart  juce_ipc_method_channel.dart  juce_ipc_platform_interface.dart  message_framing.dart  message_framing_state.dart
lib/src/: child_process_worker.dart  debug_print.dart  interprocess_connection.dart  message_framing.dart  message_framing_state.dart  message_framing_state.freezed.dart  path.dart
linux/: CMakeLists.txt  juce_ipc_plugin.cc
linux/include/juce_ipc/: juce_ipc_plugin.h
test/: child_process_worker_test.dart  interprocess_connection_test.dart  juce_ipc_dart_test.dart  juce_ipc_method_channel_test.dart  juce_ipc_test.dart
tool/: setup_git_hooks.dart
tool/juce/: CMakeLists.txt  ChildProcessDemo.h
